feat: implementando dbContex e inserção do membros no banco

--- a/FinanceApp.Application/FinanceApp.Application.csproj
+++ b/FinanceApp.Application/FinanceApp.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinanceApp.Core\FinanceApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
